--- a/app/src/main/res/layout/fragment_thrift.xml
+++ b/app/src/main/res/layout/fragment_thrift.xml
@@ -2,21 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/fragment_thrift"
     android:layout_height="match_parent"
     tools:context=".ui.home.ThriftFragment">
 
-    <!-- Add FrameLayout with ID fragment_container here -->
-    <FrameLayout
-        android:id="@+id/fragment_container"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <!-- TODO: Update the layout inside the fragment container as needed -->
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment" />
-
-    </FrameLayout>
+        android:layout_height="match_parent"
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
