--- a/app/src/main/res/layout/grid_item_layout.xml
+++ b/app/src/main/res/layout/grid_item_layout.xml
@@ -12,7 +12,9 @@
         android:layout_height="wrap_content"
         android:src="@drawable/media"
         android:scaleType="center"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:scaleX="0.8"
+        android:scaleY="0.8"/>
 
     <TextView
         android:id="@+id/text"
@@ -20,5 +22,12 @@
         android:layout_height="wrap_content"
         android:text=""
         android:textSize="16sp"
+        android:textColor="@android:color/black"/>
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="12sp"
         android:textColor="@android:color/black"/>
 </LinearLayout>
